Fix header height overlapping
set height to min-height

--- a/src/static/index/style.css
+++ b/src/static/index/style.css
@@ -35,7 +35,8 @@ h2,
 h3,
 h4,
 h5,
-h6 {
+h6,
+p {
   color: var(--primary-color, #003b59);
 }
 
@@ -48,23 +49,18 @@ h6 {
   background-color: var(--primary-color, #003b59);
 }
 
-.navbar 
-.nav-item 
-.navbar-item__link {
+.navbar .nav-item .navbar-item__link {
   color: #ffffff;
 }
 
-.navbar 
-.nav-item 
-.navbar-item__link:hover {
+.navbar .nav-item .navbar-item__link:hover {
   color: #ffffffcc;
 }
 
 /* Header details  */
 .header {
-  min-height: 23rem;
-  height: 30rem;
-  height: 100vh;
+  min-height: 30rem;
+  min-height: 100vh;
 }
 
 /* header contents containers layout */
@@ -98,7 +94,7 @@ h6 {
   /* overlay that is visible on mobile */
   .header-overlay {
     top: 0;
-    left:0;
+    left: 0;
     width: 100%;
     height: 100%;
     z-index: 0;
@@ -108,11 +104,10 @@ h6 {
 
 /* overlay, only visible on desktop  */
 
-.header-image__container
-.header-overlay {
+.header-image__container .header-overlay {
   top: 0;
   right: 0;
-  background-color: #ffffff21
+  background-color: #ffffff21;
 }
 
 @media (min-width: 768px) {
@@ -124,13 +119,29 @@ h6 {
   }
 }
 
-/* title changes on mobile and desktop */
+/* title on mobile and desktop */
+.title__container {
+  padding-top: 3rem;
+}
 
 .header__title {
   font-size: 2.3rem;
   font-weight: bold;
 }
 
+.header__title-body {
+  padding-top: 2rem;
+  font-size: 1.18rem;
+  font-family: Arial, sans-serif;
+}
+
+/* text shadow on desktop */
+.header__title,
+.header__subtitle {
+  text-shadow: 1px 2px 4px #0000001f;
+}
+
+/* change header font color on mobile */
 @media (max-width: 767px) {
   .header__title,
   .header__subtitle,
@@ -138,14 +149,4 @@ h6 {
     color: white;
     text-shadow: 1px 2px 7px black;
   }
-}
-
-.title__container {
-  align-items: center;
-  justify-content: center;
-}
-
-.header__title-body {
-  padding-top: 2rem;
-  color: 
 }
